src/test/deca/context/invalid/resultats/test13_assign-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test13_assign.ass introuvable
